--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "socket.io": "^4.7.2"
   }
 }
