--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "uuid": "^9.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.0"
   }
 }
