--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
+    "express-session": "^1.17.3",
+    "moment": "^2.29.4"
   }
 }
