--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
     "nodemon": "^3.0.1",
+    "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2",
-    "uuid": "^9.0.0",
-    "connect-mongodb-session": "^3.1.1",
-    "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3",
-    "moment": "^2.29.4"
+    "uuid": "^9.0.0"
   }
 }
