--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -27,13 +29,11 @@
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.2",
-    "uuid": "^9.0.0",
-    "bcrypt": "^5.1.1",
-    "connect-mongo": "^5.0.0",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "socket.io": "^4.7.2",
+    "uuid": "^9.0.0"
   }
 }
