--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose-paginate-v2": "^1.7.31",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
