--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "faker": "^6.6.6",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.7.31",
